Archive2/e5/07bb6594ccae93/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'foo::foo' names the constructor, not the type
     foo::foo a;
     ^
main.cpp:5:14: error: expected ';' before 'a'
     foo::foo a;
              ^
main.cpp:5:15: error: statement cannot resolve address of overloaded function
     foo::foo a;
               ^
